--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <body>
     <div>
         <h1>Pablo Prates Fernandes Portfolio</h1>
-        <img src="" alt="Pablo Fernandes photo">
     </div>
 
     <div id="menu">
@@ -53,15 +52,15 @@
             <li>Intermediate English Pronunciattion, Listening and Writing.</li>
         </ul>
     </div>
-    <div>
+    <div id="links">
         <h3>Things that I use to read</h3>
         <p><a href="http://linuxcommand.org" target="_blank"> The Linux Command blog</a></p>
-        <p><a href="https://codewithhugo.com/ target="_blank"> The Code With Hugo blog</a></p>
+        <p><a href="https://codewithhugo.com/" target="_blank"> The Code With Hugo blog</a></p>
     </div>
 
     <div id="photo">
         <h3>See below a picture of me nowadays</h3>
-        <img src="pablo.jpeg" alt="Pablo Fernandes photo" width="400px">
+        <img src="pablo.jpeg" alt="Pablo Fernandes photo" width="300px" height="450px">
     </div>
   </body>
 </html>
